Fixed problems according to sonarcube reccomendations